--- a/css/style.css
+++ b/css/style.css
@@ -1,37 +1,34 @@
-body{
+body {
     margin: 0;
 }
 
-nav#menu{
+nav#menu {
     text-align: center;
     background-color: #222;
 }
 
-nav#menu > ul
-{
+nav#menu>ul {
     margin: 0;
 }
 
-nav#menu > ul > li.menu-item {
+nav#menu>ul>li.menu-item {
     display: inline-block;
     padding: 25px;
     list-style: none;
-    
 }
 
-nav#menu > ul > li.menu-item a {
+nav#menu>ul>li.menu-item a {
     text-decoration: none;
     color: #fff;
 }
 
-nav#menu > ul > li.menu-item a:hover {
+nav#menu>ul>li.menu-item a:hover {
     color: #999;
 }
 
 header#header {
     position: relative;
     text-align: center;
-    
 }
 
 header#header img {
@@ -50,5 +47,43 @@ header#header h1#main-header-text {
     color: #fff;
 }
 
+section#about {
+    margin: 30px 0;
+    padding: 0 50px;
+}
 
+section#about h2#about-header {
+    font-size: 30px;
+    text-align: center;
+    margin-bottom: 20px;
+}
 
+section#about p.about-content {
+    text-align: center;
+}
+
+footer#contact {
+    padding: 30px 50px;
+    background-color: #222;
+}
+
+footer#contact h2#contact-header {
+    font-size: 30px;
+    text-align: center;
+    margin-bottom: 20px;
+    color: #fff;
+}
+
+footer#contact address#contact-content {
+    text-align: center;
+    color: #fff;
+    font-style: normal;
+}
+
+footer#contact address#contact-content a {
+    color: #fff;
+}
+
+footer#contact address#contact-content a:hover {
+    color: #999;
+}
